# ckanext-gobar-theme

./: MANIFEST.in  README.md  setup.cfg  test.ini
.github/workflows/: test.yml
ckanext/gobar_theme/: cli.py  helpers.py  plugin.py  views.py
ckanext/gobar_theme/logic/: action.py  auth.py  schema.py  validators.py
ckanext/gobar_theme/tests/: test_helpers.py  test_views.py
ckanext/gobar_theme/tests/logic/: test_action.py  test_auth.py  test_validators.py
